# vulnscan

./: .gitignore  README.md  main.py  pyproject.toml  sample_requirements.txt
documentation/: PRESENTATION_GUIDE.md  architecture-and-analysis.md
report/: __init__.py  cli_report.py  html_report.py  json_report.py  summary_utils.py
scanner/: __init__.py  dependency_parser.py
utils/: __init__.py  http_cache.py  pypi_client.py  version_utils.py
vulnerability/: __init__.py  github_advisories.py  models.py  nvd_client.py  vulnerability_scanner.py
