[project]
name = "depsecscan"
version = "0.1.0"
description = "Python dependency vulnerability scanner (NVD + GitHub Advisories)"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "packaging>=24.1",
  "rich>=13.7.1",
  "tabulate>=0.9.0",
  "pipdeptree>=2.23.4"
]

[project.optional-dependencies]
dev = [
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*", "vulnerability*", "report*", "utils*"]

[tool.pyright]
typeCheckingMode = "basic"

